# aind-ccf-alignment-experiments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
misc/: orientation_metadata.json
notebooks/: ApplyTransformToLabelImage.ipynb  ApplyTransformToPointSet.ipynb  CCFLabelContour.ipynb  CompareWithDice.ipynb  EvaluateDistanceResults.ipynb  EvaluateRegistration.ipynb  FormatForVisuals.ipynb  LocalFetchFromS3.ipynb  ProcessPointDistances.ipynb  RegisterToCCF.ipynb  StreamSmartSPIM.ipynb
scripts/: point_distance.py
src/aind-kitware-collab/: README.md  index.html
src/aind_ccf_alignment_experiments/: image.py  label_methods.py  point_distance.py  postprocess_cli.py  registration_methods.py  smartspim.py  url.py
test/: test_image.py  test_load.py  test_registration.py
